# wheat-esp-tools

./: .gitignore  README-EN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.codex/environments/: environment.toml
.github/workflows/: build-desktop.yml
scripts/: regenerate-icons.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/css/: style.css
src/components/: NavIcon.vue  SerialPortSelect.vue  Terminal.vue  Upload.vue
src/db/: db.ts
src/locales/: i18n.ts
src/router/: index.ts
src/stores/: Preference.ts
src/utils/: audio.ts  cli.ts  common.ts  serial.ts
src/views/constant/: tool.ts
src/views/home/: index.vue
src/views/layout/: index.vue
src/views/setting/: index.vue
src/views/tools/audio/: index.vue
src/views/tools/basic/: index.vue
src/views/tools/ble/: index.vue
src/views/tools/firmware/components/: FirmwareList.vue  HistoryPath.vue
src/views/tools/flash/: index.vue
src/views/tools/partition/: index.vue
src/views/tools/serial/: index.vue
