[package]
name = "wheat-embedding-toolkit"
version = "0.0.1"
description = "Wheat Embedding Toolkit"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2.0"
bincode = "1.3.3"
anyhow = "1.0.69"
regex = "1.9.0"
tungstenite = "0.19.0"
url = "2.4.0"
btleplug = "0.11.1"
tokio = { version = "1.32.0", features = ["rt", "sync", "full"] }
futures = "0.3.28"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
# debug = true
# debug-assertions = true
